Mon Jun 27 10:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/rtcosscheduling.mpb:
          Added requires dummy_label. The RTCosScheduling library uses
          a non compliant way to register its interceptors. This is
          causing problems with the PI refactory so disable the building
          of this lib until that has been fixed. See also bugzilla 2163.

Mon Jun 27 08:21:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread.cpp:
          Change to protect against race condition in sema based Event
          implementation.

        * ace/OS_NS_Thread.inl:
          Change in errno (EINTR) handling with FIFO based sema timedwait.

Mon Jun 27 06:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Message_Queue_T.{h,cpp}:
          Initialise pointers with 0 and removed work around for Sun CC 5.1,
          we don't support that compiler already for years

Mon Jun 27 01:03:12 2005 Stoyan Paunov <s.paunov@vanderbilt.edu>

        * bin/MakeProjectCreator/config/global.features:
        * MPC/config/global.features:
        * MPC/config/ZIP_Wrapper.mpb:

          Added a new feature to MPC regarding the ZIP_Wrappers used by
          the Repository Manager. I added this feature to make sure the RM
          would not be compiled unless the proper ZIP libraries are in place.
          Please check the README in CIAO/DAnCE/new_RepositoryManager


Sun Jun 26 22:29:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/config-posix.h:
          Made test for POSIX_SEM TIMEOUTS more specific.

        * ace/config-linux-common.h:
          Added check to fix detection of POSIX_SEM TIMEOUTS for Linux
          >= 2.6 because of crippled POSIX macros (moved here from
          config-posix.h).
          Made implementation of FIFO based Semaphores for Linux < 2.6
          user selectable instead of default (default now back to